src/ast/snapshots/tests__symbol_table_decl.snap
---
source: src/ast/symbol.rs
expression: determinize(table)
---
[
    (
        ScopeId(
            0,
        ),
        Scope {
            parent: None,
            ty: NormalScope,
            variables: PartialSymbolTable {
                vars: [],
            },
        },
    ),
    (
        ScopeId(
            1,
        ),
        Scope {
            parent: Some(
                ScopeId(
                    0,
                ),
            ),
            ty: NormalScope,
            variables: PartialSymbolTable {
                vars: [
                    VariableRecord {
                        id: IdentId(
                            0,
                        ),
                        text: "f",
                        decl: FunctionDecl(
                            FunctionDecl(
                                NodeId(
                                    14,
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    ),
    (
        ScopeId(
            2,
        ),
        Scope {
            parent: Some(
                ScopeId(
                    1,
                ),
            ),
            ty: FunctionScope,
            variables: PartialSymbolTable {
                vars: [
                    VariableRecord {
                        id: IdentId(
                            1,
                        ),
                        text: "x",
                        decl: FunctionArg(
                            FunctionDeclArgs(
                                NodeId(
                                    5,
                                ),
                            ),
                        ),
                    },
                    VariableRecord {
                        id: IdentId(
                            2,
                        ),
                        text: "y",
                        decl: FunctionArg(
                            FunctionDeclArgs(
                                NodeId(
                                    8,
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    ),
    (
        ScopeId(
            3,
        ),
        Scope {
            parent: Some(
                ScopeId(
                    2,
                ),
            ),
            ty: NormalScope,
            variables: PartialSymbolTable {
                vars: [
                    VariableRecord {
                        id: IdentId(
                            3,
                        ),
                        text: "z",
                        decl: Decl(
                            Decl(
                                NodeId(
                                    10,
                                ),
                            ),
                        ),
                    },
                    VariableRecord {
                        id: IdentId(
                            4,
                        ),
                        text: "k",
                        decl: Decl(
                            Decl(
                                NodeId(
                                    12,
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    ),
]
